updated Lösung für Topfgeometrie

--- a/hana_project_book/LsgVisualisierungDiskussion/LsgTopfGeo.ipynb
+++ b/hana_project_book/LsgVisualisierungDiskussion/LsgTopfGeo.ipynb
@@ -80,12 +80,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dba8d47ba7da4bca9966bd08b9b63963",
+       "model_id": "2d4e4c94de3742c0a732885a736a2b4b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
       ]
      },
      "metadata": {},
@@ -131,12 +131,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f4edaf9e61b49a6b85d7dfe279c2831",
+       "model_id": "9a8465b43b604b2eb8c4f97b40f687a1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {'Complex': {'phase': 0.0, 'sp…"
+       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {'Complex': {'phase': 0.0, 's…"
       ]
      },
      "metadata": {},
@@ -152,12 +152,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91b0880d671d4040a467f94b3be64dfc",
+       "model_id": "6e12bc00205641138efc27d28acc95d7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {'Complex': {'phase': 0.0, 'sp…"
+       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {'Complex': {'phase': 0.0, 's…"
       ]
      },
      "metadata": {},
@@ -173,12 +173,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d9eea6fbeb94dc4b6f1e8763c473ea5",
+       "model_id": "1b2057941366482dbb0410c2f23985a5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
       ]
      },
      "metadata": {},
@@ -215,12 +215,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15a2a80095e84e23bfecd697637bebae",
+       "model_id": "e4ab6bece7f245268732714cb74d66d3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
       ]
      },
      "metadata": {},
@@ -236,12 +236,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9daaeabf09c491ca7bd9d7beaaf6a8e",
+       "model_id": "f8d321f6ab58424ab7616ac91c8b96d9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
       ]
      },
      "metadata": {},
@@ -286,21 +286,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating thermal source Qe...\n",
-      "Info: InnerProduct has been changed and takes now conjugate\n",
-      "since c2 is already a Conjugate operation, we don't take conjugate\n",
-      "is you don't want conjugate, use a*b\n"
+      "Calculating thermal source Qe...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c14fa3905ae4b56a6c1607fad4a0fa6",
+       "model_id": "0c8106b2df5741f38a02ebdad9604ed5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
       ]
      },
      "metadata": {},
@@ -352,12 +349,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e269890e5fea4260b3a2de8c73a0b3c4",
+       "model_id": "839446aa32dd44edb8841c8fdaa76eab",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
       ]
      },
      "metadata": {},
@@ -376,7 +373,7 @@
    "id": "106b4700-9e99-43b0-8712-02f1230c036f",
    "metadata": {},
    "source": [
-    "### Lösen des Systems für Robin-Randbedingung mit $\\alpha=10$\n",
+    "### Lösen des Systems für Robin-Randbedingung mit $\\alpha=1$\n",
     "Wie in Abschnitt {ref}`ref:RobinRand` beschrieben, lässt sich eine teilweise Isolation mit Robin-Randbedingungen modellieren. Je tiefer der Parameter $\\alpha$, desto besser die Isolation."
    ]
   },
@@ -403,12 +400,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b171c6fb2d748fa8285f64790266de4",
+       "model_id": "0ff9ac8bf50c42a99730dea2614602b3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
       ]
      },
      "metadata": {},
@@ -417,17 +414,30 @@
    ],
    "source": [
     "tp.update_dirichlet_boundaries('')\n",
-    "alpha = 10\n",
+    "alpha = 1\n",
     "tp.add_robin_boundary_condition('outer_left|outer_top|outer_right', alpha, lamAir)\n",
     "gfT = tp.solve()\n",
     "if gfT:\n",
     "    tp.draw_temperature_solution()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac856f02",
+   "metadata": {},
+   "source": [
+    "Um eine realistische Aussage über die tatsächliche Temperatur im Wasser treffen zu können, müsste man die Stromstärke und die genaue Geometrie eines echten Induktionsofens übernehmen.\n",
+    "\n",
+    "Auf dieser Basis könnten die berechneten Ergebnisse mit Messwerten verglichen werden. So ließe sich der Wärmeübergangskoeffizient \n",
+    "𝛼, der für die Randbedingungen eine wichtige Rolle spielt, besser bestimmen und an reale Bedingungen anpassen.\n",
+    "\n",
+    "In dieser Simulation wurde davon ausgegangen, dass das Wasser im Topf überall die gleiche Temperatur hat. Das liegt daran, dass keine Strömungen im Wasser berücksichtigt wurden. Solche Effekte würden normalerweise mit den Navier-Stokes-Gleichungen beschrieben. Da diese hier weggelassen wurden, ist die Temperatur des Wassers im Modell überall gleich und entspricht der Temperatur des Topfbodens. In der Realität führt die Bewegung des Wassers jedoch oft zu einer ungleichmäßigen Verteilung der Temperatur."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -441,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
