--- a/hana_project_book/Problemformulierung/FormulierungWirbelstrom.ipynb
+++ b/hana_project_book/Problemformulierung/FormulierungWirbelstrom.ipynb
@@ -213,7 +213,7 @@
     "q = \\frac{1}{2} | \\mathbf{J} \\cdot \\mathbf{E}^* |\n",
     "$$\n",
     "\n",
-    "wobei mit $\\mathbf{J} = \\mathbf{J}_{\\text{int}} + \\mathbf{J}_{\\text{ext}}$ die totale Stromdichte bezeichnet sei. $\\sigma$ ist die elektrische Leitfähigkeit, $\\mathbf{E}$ ist das elektrische Feld. Da die Grössen $\\mathbf{J}$ und $\\mathbf{E}$ komplexwertig sind, ist der zweite Operand im Skalarprodukt komplex konjugiert. Die Größe $q$ beschreibt die Wärmeerzeugung pro Volumen $(\\text{W/m}^3)$ aufgrund des induktiven Joule-Effekts.\n",
+    "wobei mit $\\mathbf{J} = \\mathbf{J}_{\\text{int}} + \\mathbf{J}_{\\text{ext}}$ die totale Stromdichte bezeichnet sei. $\\sigma$ ist die elektrische Leitfähigkeit, $\\mathbf{E}$ ist das elektrische Feld. Da die Grössen $\\mathbf{J}$ und $\\mathbf{E}$ komplexwertig sind, ist der zweite Operand im Skalarprodukt komplex konjugiert. Die Grösse $q$ beschreibt die Wärmeerzeugung pro Volumen $(\\text{W/m}^3)$ aufgrund des induktiven Joule-Effekts.\n",
     "\n",
     "\n",
     "Ausserdem ist folgender Zusammenhang als Ohmsches Gesetz für Leiter bekannt\n",
