--- a/hana_project_book/references.bib
+++ b/hana_project_book/references.bib
@@ -12,3 +12,11 @@
 	note        = {Aufgabenstellung für das Projekt im Modul HANA Numerik SEP. Thema: Induktive Erwärmung. Gruppe: Samuel Dobler, Alexander Grunder, Pascal Heiniger.}
 }
 
+@online{GrossWassertechnikLeitfaehigkeit,
+	organization = {GROSS Wassertechnik GmbH},
+	title        = {{Was bedeutet die elektrische Leitfähigkeit von Wasser?}},
+	url          = {https://www.gross-wassertechnik.de/wissen/leitfaehigkeit-wasser/},
+	urldate      = {2025-06-10},
+	publisher    = {GROSS Wassertechnik GmbH},
+	location     = {Keltern, Deutschland}
+}
